--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
         "beberlei/assert": "^3.0",
         "symfony/config": "^4.3.1|^5.0",
         "symfony/console": "^4.3.1|^5.0",
-        "symfony/process": "^4.3.1|^5.0",
         "symfony/dependency-injection": "^4.3.1|^5.0",
         "symfony/http-foundation": "^4.3.1|^5.0",
-        "symfony/http-kernel": "^4.3.1|^5.0"
+        "symfony/http-kernel": "^4.3.1|^5.0",
+        "symfony/process": "^4.3.1|^5.0"
     },
     "require-dev": {
         "doctrine/annotations": "^1.6",
