--- a/tests/Fixtures/Symfony/app/config/server_v2/swoole.yaml
+++ b/tests/Fixtures/Symfony/app/config/server_v2/swoole.yaml
@@ -1,6 +1,30 @@
 swoole:
     server:
-        running_mode: reactor
+
+        templates:
+            handlers:
+                sigIntHandler:
+                    id: swoole_bundle.server.templates.handlers.sig_int_handler
+                symfonyDefaultHttpHandler:
+                    id: swoole_bundle.server.templates.handlers.api_server_http_handler
+                    config: {}
+            listeners:
+                http:
+                    socket:
+                        host: localhost
+                        port: 9200
+                        type: tcp_dualstack
+                    http:
+                        enabled: true
+                        http2: true
+                    encryption:
+                        enabled: false
+                    config: {}
+                    handlers:
+                        http_request:
+                            -   parent: symfonyDefaultHttpHandler
+
+#        running_mode: reactor
         socket:
             host: localhost
             port: 9443
@@ -28,7 +52,7 @@ swoole:
             ciphers: ~
 
         config: {}
-            # swoole server optional global config
+        # swoole server optional global config
 
         # swoole event handlers on "server" objects
         handlers:
@@ -36,20 +60,27 @@ swoole:
                 # predefined handler:
                 - sigIntHandler
                 # the same as
-                # - ref: sigIntHandler
-                #   config: {}
+                # - parent: sigIntHandler
+
+                # predefined handler 2:
+                - '@swoole_bundle.server.templates.handlers.test_1'
+                # the same as
+                # - id: '@swoole_bundle.server.templates.handlers.sig_int_handler'
 
                 # use external service from container
-                - id: '@external.bundle.logging.server.handler'
-            http_request:
-                # reference predefined handler with overrides, which will create new service in container
-                - parent: symfonyDefaultHandler
-                  # service will be constructed, with id like: `swoole_bundle.server.handler.http_request.main2`
-                  id: main2
-                  args: {}
-                    # ... optional config, only for "predefined" service templates
+                -   id: '@swoole_bundle.server.templates.handlers.test_2'
+                -   id: 'swoole_bundle.server.templates.handlers.test_3'
+#            http_request:
+#                # reference predefined handler with overrides, which will create new service in container
+#                -   parent: symfonyDefaultHttpHandler
+#                    # service will be constructed, with id like: `swoole_bundle.server.handler.http_request.main2`
+#                    id: main2
+#                    config: {}
+#                    # ... optional config, only for "predefined" service templates
 
         listeners:
+            -   id: test
+                parent: test
             -   id: custom
                 parent: ~
                 socket:
@@ -62,11 +93,11 @@ swoole:
                 encryption:
                     enabled: false
                 config: {}
-                    # swoole listener/port optional config
+                # swoole listener/port optional config
                 handlers:
                     http_request:
-                        - ref: swooleBundleApiHandler
-                          id: swooleBundleApi2
+                        -   parent: swooleBundleApiHandler
+                            id: swooleBundleApi2
 
 
 
